# rust_js_wasm_template

./: .gitignore  Cargo.toml  index.html  myClass.js  readme.md  webpack.config.js
src/: lib.rs
