[package]
name = "rust_js_wasm_template"
version = "0.1.0"
authors = ["Naturel Lee <1314carefully@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
[dependencies.web-sys]
version = "0.3.47"
features=[
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]